<feat>: updating code

--- a/autonomous_driving.ipynb
+++ b/autonomous_driving.ipynb
@@ -767,11 +767,10 @@
     "axs[1].set_title('Validation Image')\n",
     "def nvidia_model():\n",
     "  model = Sequential()\n",
-    "  model.add(Conv2D(24, kernel_size=(5,5), strides=(2,2), input_shape=(66,200,3),activation='relu'))\n",
-    "  model.add(Conv2D(36, kernel_size=(5,5), strides=(2,2), activation='relu'))\n",
-    "  model.add(Conv2D(48, kernel_size=(5,5), strides=(2,2), activation='relu'))\n",
-    "  model.add(Conv2D(64, kernel_size=(3,3), activation='relu'))\n",
-    "  model.add(Conv2D(64, kernel_size=(3,3), activation='relu'))\n",
+    "  model.add(Conv2D(24, kernel_size=(5,5), strides=(2,2), input_shape=(66,200,3),activation='elu'))\n",
+    "  model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "  model.add(Conv2D(12, kernel_size=(3,3), strides=(2,2), activation='elu'))\n",
+    "  model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "  \n",
     "#   model.add(Dropout(0.5))\n",
     "  \n",
